--- a/AthletesCompass.xcodeproj/xcshareddata/xcschemes/AthletesCompass.xcscheme
+++ b/AthletesCompass.xcodeproj/xcshareddata/xcschemes/AthletesCompass.xcscheme
@@ -16,7 +16,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "750F75F42EBA16FD008CAD1C"
-               BuildableName = "AthletesCompass.app"
+               BuildableName = "wave_AthletesCompass.app"
                BlueprintName = "AthletesCompass"
                ReferencedContainer = "container:AthletesCompass.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "750F75F42EBA16FD008CAD1C"
-            BuildableName = "AthletesCompass.app"
+            BuildableName = "wave_AthletesCompass.app"
             BlueprintName = "AthletesCompass"
             ReferencedContainer = "container:AthletesCompass.xcodeproj">
          </BuildableReference>
@@ -69,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "750F75F42EBA16FD008CAD1C"
-            BuildableName = "AthletesCompass.app"
+            BuildableName = "wave_AthletesCompass.app"
             BlueprintName = "AthletesCompass"
             ReferencedContainer = "container:AthletesCompass.xcodeproj">
          </BuildableReference>
